--- a/VC80/80ScriptDev2.vcproj
+++ b/VC80/80ScriptDev2.vcproj
@@ -781,6 +781,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\scripts\eastern_kingdoms\deeprun_tram.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\scripts\eastern_kingdoms\dun_morogh.cpp"
 					>
 				</File>
